infra/k8s-dev/ingress.svc.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-srv-ext
# spec:
#   type: ExternalName
#   externalName: backend-srv.inv2.svc.cluster.local
#   ports:
#     - port: 3001
#       targetPort: 3001
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: inv2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: inv2.loc
      http:
        paths:
          - pathType: Prefix
            path: /api/v2/backend/?(.*)
            backend:
              service:
                name: backend-srv
                port:
                  number: 3001
          - pathType: Prefix
            path: /api/v2/users/?(.*)
            backend:
              service:
                name: backend-srv
                port:
                  number: 3001
          # - pathType: Prefix
          #   path: /api/v2/logs/?(.*)
          #   backend:
          #     service:
          #       name: logs-srv
          #       port:
          #         number: 3100
    - host: app.inv2.loc
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: web-client-srv
                port:
                  number: 3000
    - host: admin.inv2.loc
      http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: admin-admin-srv
                port:
                  number: 3000
